<resources>
    <string name="app_name">ProMuuseum</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Alusta</string>
    <string name="no_barcode_captured">Koodi ei leitud</string>
    <string name="barcode_error_format">Viga koodi lugemisel: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="connecting_reader">Ühendan lugejaga</string>
    <string name="reader_connected">Koodilugeja on ühendatud</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Kaamera kasutamiseks on vaja anda luba</string>
    <string name="no_camera_permission">Rakendus ei tööta ilma kaamera kasutamise loata. Rakendus suletakse.</string>
    <string name="low_storage_error">Näotuvastuse sõltuvusi ei saa alla laadida, kuna telefonis on liiga vähe ruumi</string>

    <!-- General -->
    <string name="change">Muuda</string>

    <!-- Main page -->
    <string name="main_item">Ühenda koodilugeja</string>
    <string name="main_item_list">Asukoha vaade</string>

    <!-- Item -->
    <string name="item_code_title">Kood</string>
    <string name="item_name_title">Nimetus</string>
    <string name="item_location_title">Asukoht</string>
    <string name="item_condition_title">Seisund</string>
    <string name="item_last_checked_title">Viimati kontrollitud</string>
    <string name="item_check">Kontrollitud</string>

    <!-- String related to the list view -->
    <string name="open_item_list">Objektide nimekiri</string>
    <string name="unchecked_title">Kontrollimata</string>
    <string name="checked_title">Kontrollitud</string>
    <string name="lost_title">Kadunud</string>

    <!--String related to search -->
    <string name="search">Otsi</string>
    <string name="search_title">Otsing</string>
    <string name="search_by">Otsi koodi abil</string>
    <string name="code">sisesta kood</string>
    <string name="not_found">Ei leidnud</string>
    <string name="scan_code">Skaneeri kood</string>
</resources>
