<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ee.proekspert.promuseum.MainActivity">

    <Button
        android:id="@+id/search_page_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:text="Search"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_barcode_captured"
        android:textSize="22sp"
        android:autoLink="all"
        android:freezesText="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@id/show_item_list"/>

    <Button
        android:id="@+id/show_item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_item_list"
        android:layout_below="@id/result_textview"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"/>

    <Button
        android:id="@+id/show_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_item_list"
        android:background="@color/colorAccent"
        android:text="@string/main_item"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:text="Show Item" />

</android.support.constraint.ConstraintLayout>
